styles/site.css
html {
  background-color: rgba(0, 0, 0, 0.908);
  color: white;
  font-family: Helvetica, sans-serif;
}

text {
  color: white !important;
}

div.scroll-bounce {
  font-weight: bold;
  animation: bounce 2s infinite;
  position: relative;
}

@keyframes bounce {
  0% {
    top: 0;
  }

  50% {
    top: 5px;
  }

  100% {
    top: 0px;
  }
}

div.scroll-bounce p {
  text-align: center;
}

div#intro {
  margin-left: 8%;
  margin-right: 8%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  height: 90vh
}

div#title-descr {
  display: flex;
  flex-direction: column;
  align-items: start;
}

img#descr {
  margin-top: 20px;
}

div#car-info {
  margin-top: 5%;
  margin-bottom: 4%;
  margin-left: 8%;
  margin-right: 8%;
  display: flex;
  flex-direction: row;
  height: 90vh;
  align-items: center;
  justify-content: space-between;
}

#lineBlank,
#circuitBlank {
  text-decoration: underline;
}

div#car-description {
  margin-top: 10px;
  margin-left: 8px;
  margin-right: 20px;
  font-size: 18px;
}

div#car-and-points {
  position: relative;
}

.circle {
  height: 20px;
  width: 20px;
  background-color: black;
  border: 2px solid white;
  border-radius: 50%;
  position: absolute;
}

.car-popup {
  position: absolute;
  padding: 4px;
  width: 180px;
  height: 130px;
  border: 1px solid white;
  background-color: rgba(0, 0, 0, 0.506);
  line-height: 80%;
}

.car-popup p {
  margin: 0px;
  font-size: 11px;
}

.car-popup p:first-child {
  text-align: center;
  font-weight: bold;
  margin-bottom: 2px;
}

/* start: circles on the car image */
#circle-1 {
  top: 100px;
  left: 54px;
}

#circle-1-div {
  visibility: hidden;
  top: -60px;
  left: 50px;
}

#circle-2 {
  top: 200px;
  left: 150px;
}

#circle-2-div {
  visibility: hidden;
  top: 190px;
  left: 180px;
}

#circle-3 {
  top: 80px;
  left: 380px;
}

#circle-3-div {
  visibility: hidden;
  top: -80px;
  left: 310px;
}

#circle-4 {
  top: 150px;
  left: 500px;
}

#circle-4-div {
  visibility: hidden;
  top: 150px;
  left: 540px;
}

#circle-5 {
  top: 30px;
  left: 600px;
}

#circle-5-div {
  visibility: hidden;
  top: -80px;
  left: 400px;
}

/* end: circles on the car image */


div#infoAnnotations {
  display: flex;
  flex-direction: column;
  width: 400px;
}

div#map {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  margin-top: 5%;
  height: 100%;
  margin-left: 8%;
  margin-right: 8%;
}

#scatterText {
  width: 400px;
  font-size: 18px;
}

#driverYearStats {
  width: 275px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.flagDiv {
  margin-right: 5px;
  margin-top: 3px;
}

.imgTitle {
  margin-bottom: 10px;
}

#mapAnnotations {
  margin-top: 5%;
}


#active-yes {
  visibility: hidden;
}

#mapPopup {
  border: 2px solid white;
  margin-top: 20px;
  height: 100px;
  width: 350px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

#driverYearStats {
  border: 2px solid white;
  margin-top: 20px;
  margin-left: 8px;
  height: 100px;
}

h3.popupTitle {
  margin: 8px 8px 3px 8px;
}

#circuitName,
#circuitLocation,
#active-yes,
#driverYearStats text {
  margin-left: 8px
}

#mapText {
  width: 400px;
  font-size: 18px;
  margin-right: 50px;
}

.axis {
  font-size: 13px;
}

.axis-label {
  font-family: Helvetica, sans-serif;
}

div#lineChartArea,
.bar-chart-area,
div#scatterArea {
  margin: 200px 80px 200px 80px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
}

div#lineText {
  width: 400px;
  font-size: 18px;
}

.bar-desc {
  width: 400px;
  font-size: 18px;
  margin-right: 60px;
}

button {
  margin-top: 50px;
  background: none;
  border: none;
  color: white;
  font-size: 20px;
}

.next-button {
  cursor: pointer;
  font-size: 19px;
  margin-left: 5px;
  padding: 3px 10px 3px 10px;
  border-radius: 2px;
  border: 2px solid white;
}

.next-button:hover {
  background-color: rgba(82, 82, 82, 0.493);
}

#scatterAnnotations {
  /* padding-right: 50px; */
  margin-left: -50px;
}

